styles.css
/* whole page */

*, 
*::before, 
*::after {
    box-sizing: border-box;
}

body {
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    color: #1f2937;
    font-family: Arial, Helvetica, sans-serif;
}

h1 {
    font-size: 48px;
    font-weight: 900;
    margin: 0;
    line-height: 1.2;
}

h2 {
    font-size: 36px;
    font-weight: 900;
    margin: 0;
    line-height: 1.2;
}

h3 {
    font-size: 24px;
    margin: 0;
    line-height: 1.5;
}

p {
    font-size: 18px;
    font-weight: normal;
    margin: 0;
    line-height: 1.2;
}

.button {
    background-color: #3882f6;
    width: fit-content;
    padding: 10px 20px;
    text-decoration: none;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 8px;
}

.button.on-blue {
    border: 2px solid #f9faf8;
}

.text-centred {
    text-align: center;
}

/* header & footer */

header,
footer {
    background-color: #1f2937;
    color: #f9faf8;
    display: flex;
    align-items: center;
    padding: 20px 15%;
}

header {
    justify-content: space-between;
    font-size: 24px;
}

nav {
    display: flex;
    justify-content: space-between;
    font-size: 18px;
    gap: 24px;
}

nav>* {
    text-decoration: none;
    color: #f9faf8;
}

footer {
    justify-content: center;
}

/* main content & many or all rows */

main{
    display: flex;
    flex-direction: column;
}

.row{
    display: flex;
    flex-direction: column;
    padding: 80px 15%;
    align-items: center;
}

.centred-row {
    display: flex;
    flex-direction: column;
    width: 100%;
    padding: 0 5vw;
    gap: 16px;
}

/* hero row */

.hero-row {
    background-color: #1f2937;
    color: #f9faf8;
}

.hero {
    display: flex;
    width: 100%;
    flex-wrap: wrap-reverse;
    align-items: center;
    gap: 32px;
}

.hero-content {
    display: flex;
    flex-direction: column;
    align-self: stretch;
    justify-content: flex-start;
    flex: 1 1 40%;
    gap: 16px;
}

.hero-image {
    background-color: grey;
    flex: 1 1 400px;
    height: 300px;
    object-fit: cover;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 2px solid #f9faf8;
    border-radius: 8px;
}

/* showcase */

.row.showcase-row {
    margin-top: -40px;
}

.centred-row.showcase-centre {
    gap: 40px;
}

.showcase-boxes {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    gap: 16px;
    align-items: center;
}

.showcase-box {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    flex: 1 1 150px;
    align-items: center;
    gap: 16px;
}

.image-description {
    width: 150px;
}

.showcase-image {
    height: 150px;
    width: 150px;
    border: 2px solid #3882f6;
    border-radius: 8px;
}

/* quote */

.quote-row {
    background-color: #e5e7eb;
}

p.quote-text {
    font-size: 24px;
    font-weight: lighter;
    font-style: italic;
}

.quote-author {
    text-align: right;
}

/* call to action */

.banner {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 30px 100px;
    background-color: #3882f6;
    color: #f9faf8;
    border-radius: 8px;
}

